tests/ui/generic-associated-types/gat-in-trait-path.base.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/gat-in-trait-path.rs:26:17
   |
LL | fn f(_arg : Box<dyn for<'a> Foo<A<'a> = &'a ()>>) {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/gat-in-trait-path.rs:10:10
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     type A<'a> where Self: 'a;
   |          ^ ...because it contains the generic associated type `A`
   = help: consider moving `A` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
